--- a/Capitulos/cap2.tex
+++ b/Capitulos/cap2.tex
@@ -1,29 +1,29 @@
-\chapter{El entrelazamiento y la mecánica estadística} \label{cap:2}
+\chapter{El Entrelazamiento y La Mecánica stadística} \label{cap:2}
 
 
 
-La mecánica clásica nos habla de un sistema físico definido que para todos los tiempos está especificado. Este sistema evolucionan de manera determinista dadas las ecuaciones de movimiento. Pero lo que sorprende al tratar con  sistemas termodinámicos es que aunque se hable de un sistema clásico este puede mostrar propiedades que dependan de promedios estadísticos. La conexión que hay entre el determinismo y estas probabilidades es una discusión que no se ha podido solucionar dado a que han existido varias soluciones pero todas con sus fallas (libro de historia de la termodinámica). Los métodos típicos requieren hablar de promedios de ensamble, promedios temporales, aleatoriedad. Todos estos conceptos siguen siendo muy debatidos y parecería que no solucionará ninguna pregunta seguir con ellos. Por eso se ha estado buscando nuevos fundamentos para la mecánica estadística.
+La mecánica clásica nos habla de un sistema físico definido que para todos los tiempos está especificado. Este sistema evolucionan de manera determinista dadas las ecuaciones de movimiento. Pero lo que sorprende al tratar con  sistemas termodinámicos es que aunque se hable de un sistema clásico este puede mostrar propiedades que dependan de promedios estadísticos \cite{CallenThermo}. La conexión que hay entre el determinismo y estas probabilidades es una discusión que no se ha podido solucionar dado a que han existido varias soluciones pero todas con sus fallas . Los métodos típicos requieren hablar de promedios de ensamble, promedios temporales, aleatoriedad. Todos estos conceptos siguen siendo muy debatidos y parecería que no solucionará ninguna pregunta seguir con ellos \cite{TodaStat}. Por eso se ha estado buscando nuevos fundamentos para la mecánica estadística.
 \\
-La mecánica estadística tiene como base el postulado de probabilidades iguales este viene dado por la ignorancia subjetiva que el observador del sistema tiene. Aunque la mecánica estadística no tiene problemas al compararse sus resultados teóricos con el experimento, el cimiento filosófico en el que reposa da mucho de que hablar dando así posturas diferentes que desde los inicios de su teoría no han sido unidos. En este capítulo se expondrá cómo Popescu et al. en \cite{Popescu2006} muestran una posible luz sobre el problema de unificar las perspectivas de la mecánica estadística. La idea principal que se quiere mostrar es cómo se puede reemplazar el postulado de probabilidades iguales por un principio canónico general basado en el entrelazamiento cuántico, al poner el entrelazamiento cuántico como nueva cimiento ya no se tiene probabilidades subjetivas sino objetivas dadas por la teoría  cuántica. Este nuevo enfoque permite evitar problemas con la ignorancia subjetiva pero también esquiva el problema de ergodicidad gracias a esto se puede ver un fundamento más claro y sólido. 
+La mecánica estadística tiene como base el postulado de probabilidades iguales este viene dado por la ignorancia subjetiva que el observador del sistema tiene. Aunque la mecánica estadística no tiene problemas al comparar sus resultados teóricos con los experimentales, el cimiento filosófico en el que reposa da mucho de que hablar dando así posturas diferentes que desde los inicios de su teoría no han podido ser unificados. En este capítulo se expondrá cómo Popescu et al. en \cite{Popescu2006} muestran una posible luz sobre el problema de unificar las perspectivas de la mecánica estadística. La idea principal que se quiere mostrar es cómo se puede reemplazar el postulado de probabilidades iguales por un principio canónico general basado en el entrelazamiento cuántico, al poner el entrelazamiento cuántico como nuevo cimiento ya no se tiene probabilidades subjetivas sino objetivas dadas por la teoría  cuántica. Este nuevo enfoque permite evitar problemas con la ignorancia subjetiva pero también esquiva el problema de ergodicidad, gracias a esto se puede ver un fundamento más claro y sólido. 
 \\
 Este capítulo solo se enfocará en mostrar cómo la mayoría de los estados del universo están termalizados sin hablar en ningún momento de la evolución de estos estados. Si en general los estados del universo están termalizados se esperaría que cualquier evolución lleve los estados al equilibrio pero en el siguiente capítulo se darán especificaciones de esta conjetura junto con detalles que hacen ver las complicaciones de formalizar las ideas intuitivas que se tienen sobre el equilibrio.
-
+\\
 
 \subsection{Definiciones}
 
-Antes de seguir sería preciso dar la notación que se usará a lo largo de este capítulo y el siguiente. Cuando se tenga un sistema cuántico grande descrito por un espacio de Hilbert $\mathcal{H}$  este se llamará el universo. Este universo será descompuesto en  dos subsistemas. El primero se llamará el sistema $S$  y el segundo se le dará el nombre de ambiente $E$, en ocasiones $S$ se le dirá subsistema y $E$ se le podrá llamar baño estos nombres son equivalentes a los anteriores. Esto lleva a descomponer $\mathcal{H}$ como $\mathcal{H}=\mathcal{H}_{S} \otimes \mathcal{H}_{E}$, con dimensiones $d_{S}$ y $d_{E}$ respectivamente, se supone que la dimensión del ambiente es mucho mayor que la del sistema. Para evitar espacios de dimensión infinita se introduce un tope para altas energías y así mantener la dimensión finita. Además se eliminarían términos de interacción del Hamiltoniano que lo lleven a subespacios no permitidos. Aún no se ha especificado nada sobre el subsistema o el ambiente (Excepto las proporciones de sus dimensiones)  esto permite decir que cualquier descomposición del espacio de Hilbert especifica un subsistema y un baño. El subsistema S puede ser cualquier cosa desde una partícula hasta el conjunto de partículas distribuidas por todo el baño.
+Antes de seguir sería preciso dar la notación que se usará a lo largo de este capítulo y el siguiente. Cuando se tenga un sistema cuántico grande descrito por un espacio de Hilbert $\mathcal{H}$  este se llamará el universo. Este universo será dividido en  dos subsistemas. El primero se llamará el sistema $S$  y el segundo se le dará el nombre de ambiente $E$, en ocasiones $S$ se le dirá subsistema y $E$ se le podrá llamar baño estos nombres son equivalentes a los anteriores. Esto lleva a descomponer $\mathcal{H}$ como $\mathcal{H}=\mathcal{H}_{S} \otimes \mathcal{H}_{E}$, con dimensiones $d_{S}$ y $d_{E}$ respectivamente, se supone que la dimensión del ambiente es mucho mayor que la del sistema. Para evitar espacios de dimensión infinita se introduce un tope para altas energías y así mantener la dimensión finita. Además se eliminarían términos de interacción del Hamiltoniano que lo lleven a subespacios no permitidos. Aún no se ha especificado nada sobre el subsistema o el ambiente (Excepto las proporciones de sus dimensiones)  esto permite decir que cualquier descomposición del espacio de Hilbert especifica un subsistema y un baño. El subsistema S puede ser cualquier cosa desde una partícula hasta el conjunto de partículas distribuidas por todo el baño.
 \\
-El estado global puro del universo se escribirá como $\ket{\phi(t)}$ en un tiempo t y su matriz de densidad se escribirá $\rho(t)=\ket{\phi(t)}\bra{\phi(t)}$. El estado del sistema se encontrará al hacer una traza parcial del ambiente sobre el estado del universo $\rho_{S}= \Tr _{B} \rho(t)$; similarmente el estado del ambiente está dado por $\rho_{B}=\Tr _{S} \rho(t)$. El promedio temporal del universo es:
+El estado global puro del universo se escribirá como $\ket{\phi(t)}$ en un tiempo t y su matriz de densidad se escribirá $\rho(t)=\ket{\phi(t)}\bra{\phi(t)}$. El estado del sistema se encontrará al hacer una traza parcial del ambiente sobre el estado del universo $\rho_{S}= \Tr _{B} \rho(t)$; similarmente el estado del ambiente está dado por $\rho_{B}=\Tr _{S} \rho(t)$ \cite{WildeInformation}. El promedio temporal del universo es:
 \begin{equation}
 \omega= \langle \rho(t) \rangle= \lim_{\tau \to \infty} \frac{1}{\tau} \int_{0}^{\tau} \rho (t)dt
 \end{equation}
-de manera análoga $\omega_{S}$ y $\omega_{B}$ son el promedio temporal para el sistema y el ambiente respectivamente. También se tiene el promedio $\langle . \rangle_{\phi}$ que es sobre todos los estados $\ket{\phi} \in \mathcal{H}_{R}$ de acuerdo a la medida estándar (unitariamente invariante). Esta medida se usa para hallar volúmenes de conjuntos de estados.
+de manera análoga $\omega_{S}$ y $\omega_{B}$ son el promedio temporal para el sistema y el ambiente respectivamente \cite{TodaStat}. También se tiene el promedio $\langle . \rangle_{\phi}$ que es sobre todos los estados $\ket{\phi} \in \mathcal{H}_{R}$ de acuerdo a la medida estándar (unitariamente invariante). Esta medida se usa para hallar volúmenes de conjuntos de estados.
 
 \section{Idea conceptual}
 
-Este nuevo tratamiento de los fundamentos de la mecánica estadística se tiene un universo. Dando como condición que el ambiente sea los suficientemente grande. Este universo está descrito por un estado cuántico puro (se conoce el estado de manera exacta) que obedece una restricción global. Se plantea que el sistema alcanza el equilibrio térmico por medio de la interacción mutua (termalización) es producto del entrelazamiento del sistema y el ambiente (Popescu et al,2006). Lo que se presentará más adelante es una definición más rigurosa que ayudará a dar cotas para la expresión "ambiente suficientemente grande".Esta idea permite formular un principio canónico general: el sistema estará termalizado para casi todos los estados puros del universo. esto es soportado por límites cuantitativos. La restricción que se impone no es una específica, esto generaliza los resultados tradicionales dados en la literatura donde se toma por restricción la energía (Kardar,2009).
+Este nuevo tratamiento de los fundamentos de la mecánica estadística se tiene un universo. Dando como condición que el ambiente sea los suficientemente grande. Este universo está descrito por un estado cuántico puro (se conoce el estado de manera exacta) que obedece una restricción global. Se plantea que el sistema alcanza el equilibrio térmico por medio de la interacción mutua (termalización) es producto del entrelazamiento del sistema y el ambiente  \cite{Popescu2006}. Lo que se presentará más adelante es una definición más rigurosa que ayudará a dar cotas para la expresión "ambiente suficientemente grande".Esta idea permite formular un principio canónico general: el sistema estará termalizado para casi todos los estados puros del universo. esto es soportado por límites cuantitativos. La restricción que se impone no es una específica, esto generaliza los resultados tradicionales dados en la literatura donde se toma por restricción la energía \cite{KardarStat}.
 \\
-Ya poniendo lo dicho en un contexto un poco más matemático, supone tener un universo asilado y bastante grande. Este tiene dos partes el sistema $S$ y el ambiente $E$. La dimensión del ambiente es mucho maś grande que la del sistema. Además se le impone una restricción global al universo llamada $R$. Desde la mecánica cuántica esto puede ponerse como restricciones en el espacio de Hilbert, restricción de los estados posibles:
+Ya poniendo lo dicho en un contexto un poco más matemático y siguiendo a Popescu et al. se supone tener un universo asilado y bastante grande este tiene dos partes el sistema $S$ y el ambiente $E$. La dimensión del ambiente es mucho más grande que la del sistema. Además se le impone una restricción global al universo llamada $R$. Desde la mecánica cuántica esto puede ponerse como restricciones en el espacio de Hilbert, restricción de los estados posibles:
 
 \begin{equation}
 \mathcal{H}_{R}\subseteq \mathcal{H}_{S}\otimes \mathcal{H}_{E},
@@ -35,7 +35,7 @@ Donde $\mathcal{H}_{S}$ y $\mathcal{H}_{E}$ son los espacios de Hilbert del sist
 \mathcal{E}_{R} = \frac{1}{d_{R}} \mathbbm{1}_{R},
 \end{equation}
 
-Donde $\mathbbm{1}_{R}$ es el operador identidad (proyección) sobre el espacio de Hilbert  $\mathcal{H}_{R}$  que tiene dimensión $d_{R}$. Esto se relaciona con el principio de probabilidades iguales porque este es el estado máximamente mezclado en $\mathcal{H}_{R}$ por ser así todos los estados bajo la restricción de $R$ tienen la misma probabilidad de salir.
+Donde $\mathbbm{1}_{R}$ es el operador identidad (proyección) sobre el espacio de Hilbert  $\mathcal{H}_{R}$  que tiene dimensión $d_{R}$. Esto se relaciona con el principio de probabilidades iguales porque este es el estado máximamente mezclado en $\mathcal{H}_{R}$  \cite{SakuraiQuantum} por ser así todos los estados bajo la restricción de $R$ tienen la misma probabilidad de salir.
 \\
 Definimos $\Omega_{S}$ como el estado canónico que está restringido por $R$ cuando el universo se encuentra en el estado $\mathcal{E}_{R}$. Esto significa que si se hace una traza parcial del ambiente al universo da como resultado el estado canónico:
 
@@ -43,7 +43,7 @@ Definimos $\Omega_{S}$ como el estado canónico que está restringido por $R$ cu
  \Omega_{S} =\Tr_{E} \mathcal{E}_{R}.
 \end{equation}
 \\
-Para lo que sigue se hace un supuesto importante  y es que el universo está en un estado puro $\ket{\phi}$ y no en un estado mixto $\mathcal{E}_{R}$, esto quiere decir que se conoce todo lo que es permitido por la mecánica cuántica del universo. Si estuviese en un estado mixto significaría que nosotros no tenemos toda la información que se pudiese tener. Ahora lo que se quiere ver es que  pese a que el estado del universo es puro el estado reducido del sistema
+Para lo que sigue se hace un supuesto importante  y es que el universo está en un estado puro $\ket{\phi}$ y no en un estado mixto $\mathcal{E}_{R}$, esto quiere decir que se conoce todo lo que es permitido por la mecánica cuántica del universo. Si estuviese en un estado mixto significaría que nosotros no tenemos toda la información que se pudiese tener \cite{SakuraiQuantum}. Ahora lo que se quiere ver es que  pese a que el estado del universo es puro el estado reducido del sistema
 
 \begin{equation}
 \rho_{S}=\Tr_{E}\ket{\phi}\bra{\phi},
@@ -55,13 +55,13 @@ se acerca al estado canónico para la gran mayoría de los casos es decir:
 \rho_{S} \approx \Omega_{S}.
 \end{equation}
 \\
-Por consiguiente para casi todos los estados puros del universo $\ket{\phi} \in \mathcal{H}_{R}$ el sistema se comporta como si el universo estuviese en el estado mixto equiprobable $\mathcal{E}_{R}$. Este  es el principio general canónico. Clarificando lo esbozado, el estado canónico del sistema $\Omega_{S}$ es el estado del sistema cuando el universo se encuentra en el estado equiprobable $\mathcal{E}_{R}$. Se puede interpretar el principio general canónico como un principio que estipula que las probabilidades iguales del sistema son aparentes porque para casi cualquier estado del universo, que sea puro, un subsistema de este universo que cumpla con ser lo suficientemente pequeño se comporta como si el universo estuviese en el estado equiprobable $\mathcal{E}_{R}$. Cabe recordar que aún no se ha especificado la restricción $R$ entonces todo este análisis es general, la restricción no necesariamente debe ser la energía u otras cantidades que se conserven. Esto hace que $\Omega_{S}$ no  deba ser obligatoriamente el estado canónico usual, puede ser el gran canónico o cualquier otro que sea acorde con la restricción impuesta. Este principio puede ser de utilidad cuando la interacción entre el ambiente y el sistema no es débil o cuando las interacciones son complicadas el principio general canónico también aplica.
+Por consiguiente para casi todos los estados puros del universo $\ket{\phi} \in \mathcal{H}_{R}$ el sistema se comporta como si el universo estuviese en el estado mixto equiprobable $\mathcal{E}_{R}$. Este  es el principio general canónico. Clarificando lo esbozado, el estado canónico del sistema $\Omega_{S}$ es el estado del sistema cuando el universo se encuentra en el estado equiprobable $\mathcal{E}_{R}$. Se puede interpretar el principio general canónico como un principio que estipula que las probabilidades iguales del sistema son aparentes porque para casi cualquier estado del universo, que sea puro, un subsistema de este universo que cumpla con ser lo suficientemente pequeño se comporta como si el universo estuviese en el estado equiprobable $\mathcal{E}_{R}$. Cabe recordar que aún no se ha especificado la restricción $R$ entonces todo este análisis es general, la restricción no necesariamente debe ser la energía u otras cantidades que se conserven. Esto hace que $\Omega_{S}$ no  deba ser obligatoriamente el estado canónico usual, puede ser el gran canónico o cualquier otro que sea acorde con la restricción impuesta\cite{ReichlStat}. Este principio puede ser de utilidad cuando la interacción entre el ambiente y el sistema no es débil o cuando las interacciones son complicadas el principio general canónico también aplica.
 
-\section{formulación matemática}
+\section{Formulación matemática}
 
-Hasta ahora no se han entrado en los detalles ni en qué significa bastante pequeño o bastante grandes, ni tampoco se ha demostrado el principio general canónico. En esta sección se orientará en los detalles matemáticos, las herramientas usadas y la demostración de los teoremas. En la siguiente sección se dará una perspectiva más física a lo hecho aquí.
+Hasta ahora no se han entrado en los detalles ni en qué significa bastante pequeño o bastante grandes, ni tampoco se ha demostrado el principio general canónico. En esta sección se orientará en los detalles matemáticos, las herramientas usadas y la demostración de los teoremas que Popescu et. al siguienron. En la siguiente sección se dará una perspectiva más física a lo hecho aquí.
 \\
-Para empezar se debe decir cuál será la distancia que usaremos para darle un sentido de cercanía a los estados $\rho_{S}$ y $\Omega_{S}$. La distancia a usar es una bastante conocida en la teoría cuántica de la información, la distancia de traza. Esta se define como:
+Para empezar se debe decir cuál será la distancia que usaremos para darle un sentido de cercanía a los estados $\rho_{S}$ y $\Omega_{S}$. La distancia a usar es una bastante conocida en la teoría cuántica de la información, la distancia de traza \cite{NielsenInformation}. Esta se define como:
 \begin{equation}
 D(\rho_{S}, \Omega_{S})= \frac{1}{2} \Tr |\rho_{S} -\Omega_{S}|=\frac{1}{2} \Tr \sqrt{(\rho_{S} -\Omega_{S})^{\dag}(\rho_{S} -\Omega_{S})}.
 \end{equation}
@@ -72,7 +72,7 @@ Esta distancia de traza se relaciona con la distancia de norma de manera sencill
 \norm{\rho_{S}-\Omega_{S}}_{1}=2 D(\rho_{S}, \Omega_{S}).
 \end{equation}
 
-Teniendo ya una forma de darle sentido al concepto de que dos estados son cercanos entonces se puede plantear el teorema central de este capítulo:
+Teniendo ya una forma de darle sentido al concepto de que dos estados son cercanos entonces se puede plantear el teorema central de \cite{Popescu2006}:
 \\
 \begin{theorem} \label{teorema principal}
 Para un estado escogido de manera aleatoria $\ket{\phi} \in \mathcal{H}_{R} \subseteq \mathcal{H}_{S} \otimes \mathcal{H}_{E} $ y un $\epsilon > 0$ arbitrario, la distancia entre la matriz densidad reducida del sistema $\rho_{S}=\Tr_{E}(\ket{\phi} \bra{\phi})$  y el estado canónico $\Omega_{S}=\Tr_{E} ( \mathcal{E}_{R})$ esta dado probabilísticamente por 
@@ -101,7 +101,7 @@ Donde $\Omega_{E}= \Tr_{S} \mathcal{E}_{R}$. Ambas cantidades $\eta $ y $\eta'$ 
 \end{theorem}
 
 \subsection{Lema de Levy} \label{ levy}
-Para poder demostrar el teorema \ref{teorema principal} se usará  el lema de Levy. Este dice que al seleccionar un punto $\phi$ aleatoriamente de una hiperesfera de dimensión alta y que $f(\phi)$ no cambie muy rápido, entonces $f(\phi) \approx \langle f \rangle $ con alta probabilidad, Más exactamente:\\
+Para poder demostrar el teorema \ref{teorema principal} se usará  el lema de Levy \cite{Lema}. Este dice que al seleccionar un punto $\phi$ aleatoriamente de una hiperesfera de dimensión alta y que $f(\phi)$ no cambie muy rápido, entonces $f(\phi) \approx \langle f \rangle $ con alta probabilidad, Más exactamente:\\
 
 \begin{lemma} \label{lemma de levy}
 
@@ -113,7 +113,7 @@ donde $\eta$ es la constante de Lipschitz de $f$, dado por $\eta= \sup|\nabla f|
 
 \end{lemma}
 
-Los conceptos manejados por el teorema \ref{lemma de levy} son conocidos generalmente excepción de la llamada constante de Lipschitz.Para poder entender qué es la  constante de Lipschitz se debe ver primero qué significa que una función sea Lipschitz continua. 
+Los conceptos manejados por el teorema \ref{lemma de levy} son conocidos generalmente a excepción de la llamada constante de Lipschitz.Para poder entender qué es la  constante de Lipschitz se debe ver primero qué significa que una función sea Lipschitz continua. 
 \\
 La definición de continuidad dad en el cálculo básico es:
 
@@ -138,7 +138,7 @@ esto permite decir que  $|f(x)-f(y)| < \epsilon $ entonces $\delta < \frac{\epsi
 \end{multline}
 como $\nabla f$ es acotado se tiene que $\sup |\nabla f(\xi)|=\eta$.\\
 
-Gracias a la normalización, los estados puros en $\mathcal{H_{R}}$ se pueden representar como puntos sobre la superficie de una hiperesfera de dimensión $2d_{R}-1$, o sea  $\mathbb{S}^{2d_{R}-1}$. Luego se puede aplicar \ref{lemma de levy} a estado cuánticos $\phi$ aleatoriamente seleccionados. Para los estados seleccionados aleatoriamente $\phi \in \mathcal{H}_{R}$, se desea mostrar que $\norm{\rho_{S}- \Omega_{S}}_{1} \approx 0$ con alta probabilidad. Para poder usar \ref{lemma de levy} primero  debe encontrarse la constante de Lipschitz ya teniendo una idea de qué es ser Lipschitz continuo se encontrará una cota para la constante $\eta$ de la función $f(\phi)=\norm{\rho_{S}-\Omega_{S}}_{1}$ que es la función que nos interesa para el problema físico. Entonces para poder lograr esto se procederá de la siguiente forma se definen dos estados reducidos $\rho_{1}= \Tr_{E} (\ket{\phi_{1}} \bra{\phi_{1}})$ y $\rho_{2}= \Tr_{E}(\ket{\phi_{2}} \bra{\phi_{2}})$, entonces
+Gracias a la normalización, los estados puros en $\mathcal{H}_{R}$ se pueden representar como puntos sobre la superficie de una hiperesfera de dimensión $2d_{R}-1$, o sea  $\mathbb{S}^{2d_{R}-1}$ \cite{SakuraiQuantum}. Luego se puede aplicar \ref{lemma de levy} a estado cuánticos $\phi$ aleatoriamente seleccionados. Para los estados seleccionados aleatoriamente $\phi \in \mathcal{H}_{R}$, se desea mostrar que $\norm{\rho_{S}- \Omega_{S}}_{1} \approx 0$ con alta probabilidad. Para poder usar \ref{lemma de levy} primero  debe encontrarse la constante de Lipschitz ya teniendo una idea de qué es ser Lipschitz continuo se encontrará una cota para la constante $\eta$ de la función $f(\phi)=\norm{\rho_{S}-\Omega_{S}}_{1}$ que es la función que nos interesa para el problema físico. Entonces para poder lograr esto se procederá de la siguiente forma se definen dos estados reducidos $\rho_{1}= \Tr_{E} (\ket{\phi_{1}} \bra{\phi_{1}})$ y $\rho_{2}= \Tr_{E}(\ket{\phi_{2}} \bra{\phi_{2}})$, entonces
 
 \begin{equation}
 |f(\phi_{1})-f(\phi_{2})|^2= |\norm{\rho_{1}-\Omega}_{1} - \norm{\rho_{2}-\Omega}_{1}|^2.
@@ -203,7 +203,7 @@ En esta parte se dará una demostración matemática explícita del principio ge
 como $\eta \le 2$ entonces
 
 \begin{equation} \label{desigualdad}
-2\exp(-Cd_{R}\epsilon^2) \ge 2 \exp(-\frac{4Cd_{R}\epsilon^2}{\eta^2}) \ge Pr_{\phi}[|f(\phi)- \langle f \rangle| \ge \epsilon ].
+2\exp(-Cd_{R}\epsilon^2) \ge 2 \exp(-\frac{4Cd_{R}\epsilon^2}{\eta^2}) \ge \Pr_{\phi}[|f(\phi)- \langle f \rangle| \ge \epsilon ].
 \end{equation}
 
 Mirando más atentamente  $|f(\phi)- \langle f \rangle| \ge \epsilon $, como la norma de traza es un distancia se tiene que  $\norm{\rho_{S} -\Omega_{S}}_{1} \ge 0$ entonces
@@ -216,7 +216,7 @@ Mirando más atentamente  $|f(\phi)- \langle f \rangle| \ge \epsilon $, como la 
 Nombrando a $\mu = \epsilon + \langle \norm{\rho_{S} -\Omega_{S}}_{1} \rangle_{\phi} $ y $\mu'=2 \exp(-Cd_{R}\epsilon^2)$ esto permite organizar el lema de levy así:
 
 \begin{equation} \label{eq.3}
-Pr_{\phi}[\norm{\rho_{S} -\Omega_{S}}_{1} \ge \mu] \le \mu'.
+\Pr_{\phi}[\norm{\rho_{S} -\Omega_{S}}_{1} \ge \mu] \le \mu'.
 \end{equation}
 
 Debido a que $d_{R}>>1$ Se asegura que $\epsilon$ y $\mu'$ son cantidades pequeñas al escoger $\epsilon=d_{R}^{-1/3}$. Para llegar a \ref{teorema principal} falta acotar $\mu$ con las dimensiones de los espacios conocidos, se impondrá una cota a $\langle \norm{\rho_{S} -\Omega_{S}}_{1} \rangle_{\phi}$; lo primero  para lograr esta empresa es acotar este promedio con trazas del estado del sistema  y luego se calcularán estas trazas para poder dejar la cota en términos de las dimensiones del sistema y la dimensión efectiva del ambiente. Se procede a encontrar la relación entre $\norm{\rho_{S} -\Omega_{S}}_{1}$ y $\norm{\rho_{S} -\Omega_{S}}_{2}$ esto se hará para tener una facilidad de manejo ya que la norma de Hilbert-Schmidt ($\norm{.}_{2}$) es más sencilla para trabajar que la norma de traza y luego se procederá con los planeado.
@@ -285,7 +285,7 @@ Aunque ya se ha acotado $\langle \norm{ \rho_{S}-\Omega_{S} }_{1}\rangle$ se qui
 \begin{equation}
 \langle \Tr \rho_{S}^{2} \rangle \le \Tr \langle \rho_{S} \rangle^{2} +\Tr \langle \rho_E \rangle^{2},
 \end{equation}
-recordando que el promedio es tomado con respecto a los estados $\ket{\phi}$, los métodos usados para encontrar esta desigualdad son usados también en destilación de entrelazamiento aleatoria y codificación de canal cuántico aleatorio. Para poder hacer este cálculo se introduce una segunda copia del espacio de Hilbert. Ahora el problema se trabaja en $\mathcal{H}_{R} \otimes \mathcal{H}_{R'}$, donde $\mathcal{H}_{R'} \subseteq \mathcal{H}_{S'} \otimes \mathcal{H}_{E'}$.
+recordando que el promedio es tomado con respecto a los estados $\ket{\phi}$, los métodos usados para encontrar esta desigualdad son usados también en destilación de entrelazamiento aleatoria y codificación de canal cuántico aleatorio \cite{QuantumDistilation}. Para poder hacer este cálculo se introduce una segunda copia del espacio de Hilbert. Ahora el problema se trabaja en $\mathcal{H}_{R} \otimes \mathcal{H}_{R'}$, donde $\mathcal{H}_{R'} \subseteq \mathcal{H}_{S'} \otimes \mathcal{H}_{E'}$.
 Percatándose de lo siguiente
 
 \begin{equation}
@@ -391,10 +391,10 @@ Con esto se finaliza la demostración del teorema \ref{teorema principal} en la 
 
 \section{Significado físico}
 
-El teorema anterior ya permite hablar del concepto importante que se sigue del aritculo de Popescu et al. la idea general del a física es poder dar una relación uno a uno entre las propiedades de un objeto físico y su representación matemática con esta correspondencia se puede decir que la teoría esta completa cuando todas las propiedades que son posibles de medir tienen su semejante en la teoría. Por ejemplo en la física clásica a las cantidades como velocidad y distancia se le asigna los símbolos matemáticos $v$ y $x$, el cuerpo puede ser especificado dando estas dos cantidades en un tiempo determinado. La mecánica clásica nos da un ejemplo sencillo pero cuando se pasa a la mecánica estadística se encuentra perspectivas diferentes que entran en conflicto con esta sencilla idea. En los inicios de la mecánica estadística hubo muchas controversias dado a que ahora la idea determinista que Newton y otros habían mostrado como ciertas (Se podía describir la naturaleza de manera predecible) ahora se introducía la probabilidad a sistemas que según Newton eran deterministas. En este punto se debe hacer claro que la necesidad de la probabilidad era por la falta de conocimiento pero no por un indeterminismo intrínseco como en la mecánica cuántica. Dos propuestas importantes surgieron en busca de una base conceptual sobre estas probabilidades, la visión de Gibbs y la de Boltzmann. Gibbs propuso la idea del ensamble, esta es una idea que hasta el día de hoy se sigue usando porque da los resultados correctos para las propiedades de sistemas termodinámicos.\\
-La idea de Gibbs es la siguiente: Se tiene un sistema macroscópico con ciertos parámetros que se pueden medir. Este sistema está compuesto por varias partículas que tienen posiciones y momentos, pero estas propiedades están restringidas por los parámetros macroscópicos. Entonces como no se puede conocer el microestado del sistemas, no se puede medir cada posición y momento de cada partícula, se tiene una libertad sobre cuál es el microestado dado el macroestado. El ensamble es el conjunto de microestados que cumplen con el macroestado, mientras el microestado cumpla con los parámetros macroscópicos hará parte del ensamble así el sistema no se encuentre en ese microestado. En teoría no hay limitación sobre el número de microestados que pertenezcan a un ensamble, este puede tener infinitos microestados. Esta idea de base para la función de densidad en el espacio de fase, cada punto en este espacio es un microestado estos micro estados no interactuan entre ellos , con esto se puede construir la mecánica estadística que se conoce. 
+El teorema anterior ya permite hablar del concepto importante que se sigue del aritculo de Popescu et al la idea general de la física es poder dar una relación uno a uno entre las propiedades de un objeto físico y su representación matemática con esta correspondencia se puede decir que la teoría esta completa cuando todas las propiedades que son posibles de medir tienen su semejante en la teoría \cite{Decoherence}. Por ejemplo en la física clásica a las cantidades como velocidad y distancia se le asigna los símbolos matemáticos $v$ y $x$, el cuerpo puede ser especificado dando estas dos cantidades en un tiempo determinado. La mecánica clásica nos da un ejemplo sencillo pero cuando se pasa a la mecánica estadística se encuentra perspectivas diferentes que entran en conflicto con esta sencilla idea. En los inicios de la mecánica estadística hubo muchas controversias dado a que ahora la idea determinista que Newton y otros habían mostrado como cierta (Se podía describir la naturaleza de manera predecible) ahora se introducía la probabilidad a sistemas que según Newton eran deterministas. En este punto se debe hacer claro que la necesidad de la probabilidad era por la falta de conocimiento pero no por un indeterminismo intrínseco como en la mecánica cuántica. Dos propuestas importantes surgieron en busca de una base conceptual sobre estas probabilidades, la visión de Gibbs y la de Boltzmann. Gibbs propuso la idea del ensamble, esta es una idea que hasta el día de hoy se sigue usando porque da los resultados correctos para las propiedades de sistemas termodinámicos.\\
+La idea de Gibbs es la siguiente: Se tiene un sistema macroscópico con ciertos parámetros que se pueden medir. Este sistema está compuesto por varias partículas que tienen posiciones y momentos, pero estas propiedades están restringidas por los parámetros macroscópicos. Entonces como no se puede conocer el microestado del sistemas, no se puede medir cada posición y momento de cada partícula, se tiene una libertad sobre cuál es el microestado dado el macroestado. El ensamble es el conjunto de microestados que cumplen con el macroestado, mientras el microestado cumpla con los parámetros macroscópicos hará parte del ensamble así el sistema no se encuentre en ese microestado. En teoría no hay limitación sobre el número de microestados que pertenezcan a un ensamble, este puede tener infinitos microestados. Esta idea de base para la función de densidad en el espacio de fase, cada punto en este espacio es un microestado estos micro estados no interactuan entre ellos , con esto se puede construir la mecánica estadística que se conoce \cite{PathriaStat}. 
 \\
-Por el contrario Boltzmann da un concepción de la mecánica estadística más intuitiva; él propone $N$ partículas que interactúan entre ellas y cumplen los parámetros macroscópicos. Las partículas no son imaginarias como en el caso de los ensambles de Gibbs, ellas son las partículas que están en el sistema que se está estudiando. Se esperaría que la solución de Boltzmann fuera la que diera los resultados correctos dada la sencillez de su propuesta pero es la formulación de Gibbs la que da la termodinámica correcta. E.T Jaynes en () muestra las diferencias matemáticas de cada perspectiva y llega a la conclusión que la formulación de Gibbs da la entropía correcta sin importar cual sea el tipo de interacción que tenga el sistema, además encuentra que la entropía que sale de la formulación Boltzmanniana no es la misma entropía dada por la termodinámica,la entropía de Boltzmann es correcta cuando no hay interacción entre las partículas.
+Por el contrario Boltzmann da un concepción de la mecánica estadística más intuitiva; él propone $N$ partículas que interactúan entre ellas y cumplen los parámetros macroscópicos. Las partículas no son imaginarias como en el caso de los ensambles de Gibbs, ellas son las partículas que están en el sistema que se está estudiando. Se esperaría que la solución de Boltzmann fuera la que diera los resultados correctos dada la sencillez de su propuesta pero es la formulación de Gibbs la que da la termodinámica correcta. E.T Jaynes en \cite{JaynesEntropies} muestra las diferencias matemáticas de cada perspectiva y llega a la conclusión que la formulación de Gibbs da la entropía correcta sin importar cual sea el tipo de interacción que tenga el sistema, además encuentra que la entropía que sale de la formulación Boltzmanniana no es la misma entropía dada por la termodinámica,la entropía de Boltzmann es correcta cuando no hay interacción entre las partículas.
 \\
 Ya con la comprobación experimental se debería aceptar la perspectiva de Gibbs como la correcta y dejar a un lado la de boltzmann pero esto deja a la mecánica estadística en un contexto filosófico poco fuerte, aunque la física busque una correspondencia entre experimento y teoría no se puede aceptar cualquier teoría solo por tener congruencia con el experimento, la física debe buscar una estabilidad conceptual en sus teorías.¿ Por qué la perspectiva de Gibbs tiene un fundamento congruente ?  lo que propone Gibbs aunque matemáticamente aceptable se basa en todos los microestados en los que el macroestado no se encuentra es decir, que para poder determinar la propiedades de estado el cual se está estudiando se debe estudiar todos los estados en los que el sistema no se encuentra pero podría estar, pero por qué para analizar un sistema que se encuentra en un estado definido y exacto debería examinar los posibles infinitos estado en donde no se encuentra si se hace un promedio sobre estos microestados ¿ cuál es el significado de este promedio?. Este problema ontológico deja la perspectiva de Gibbs en duda, mientra la de Boltzmann habla del sistema que se examina sin ningún problema de este estilo. 
 \\
