--- a/Capitulos/cap3.tex
+++ b/Capitulos/cap3.tex
@@ -1,8 +1,8 @@
-\chapter{Evolución hacia el equilibrio}
+\chapter{Evolución Hacia El Equilibrio}
 
-En el capítulo anterior se expuso la idea de Popescu et al.(referencia) para poder reconciliar las ideas fundamentales de la mecánica estadística. Se mostró que para estados genéricos de un universo se tiene que el estado del sistema va a estar muy cercano del estado canónico. Ya con esta idea la siguiente pregunta que se puede hacer es sobre la termalización, ¿ Este fenómeno cómo ocurre? ¿ se puede deducir se las ecuaciones básicas(Schrödinger, Newton , etc)?. Este capítulo mostrará lo que Linden et al. (referencia) proponen para poder responder estas preguntas siguiendo las ideas ya dadas en el capítulo anterior. La generalidad que se ha dado a los fundamentos gracias Popescu et al. permite una flexibilidad al momento de manejar nuevos problemas por eso se ve que además de tener una buena base filosófica las matemáticas dan un buen esqueleto para sostener las bases y seguir construyendo con ellas. Ahora se quiere tratar el caso en que el estado no se encuentra en un tiempo específico sino ya en un tiempo  general. Entonces se deberá apuntar la maquinaria que ya se tiene para poder redondear el problema; esto será lo primero a  precisar. Luego se mostrará que por lo general los estados del sistema llegan al equilibrio y duran allí gran parte de su tiempo, todo esto bajo las especificaciones dadas al comienzo. Se seguirá dando un teorema que muestra como para la gran mayoría de casos de estados genéricos se llegará al equilibrio, aquí también se dará un argumento sobre cómo los estados lejanos al equilibrio  llegan a equilibrarse. Además se mostrará la independencia del estado inicial y problemas que no se han llegado a solucionar desde la perspectiva de (referencia).
+En el capítulo anterior se expuso la idea de Popescu et al. \cite{Popescu2006} para poder reconciliar las ideas fundamentales de la mecánica estadística. Se mostró que para estados genéricos de un universo se tiene que el estado del sistema va a estar muy cercano del estado canónico. Ya con esta idea la siguiente pregunta que se puede hacer es sobre la termalización, ¿ Este fenómeno cómo ocurre? ¿ se puede deducir se las ecuaciones básicas(Schrödinger, Newton , etc)?. Este capítulo mostrará lo que Linden et al. \cite{LindenPaper} proponen para poder responder estas preguntas siguiendo las ideas ya dadas en el capítulo anterior. La generalidad que se ha dado a los fundamentos gracias Popescu et al. permite una flexibilidad al momento de manejar nuevos problemas por eso se ve que además de tener una buena base filosófica las matemáticas dan un buen esqueleto para sostener las bases y seguir construyendo con ellas. Ahora se quiere tratar el caso en que el estado no se encuentra en un tiempo específico sino ya en un tiempo  general. Entonces se deberá apuntar la maquinaria que ya se tiene para poder redondear el problema; esto será lo primero a  precisar. Luego se mostrará que por lo general los estados del sistema llegan al equilibrio y duran allí gran parte de su tiempo, todo esto bajo las especificaciones dadas al comienzo. Se seguirá dando un teorema que muestra como para la gran mayoría de casos de estados genéricos se llegará al equilibrio, aquí también se dará un argumento sobre cómo los estados lejanos al equilibrio  llegan a equilibrarse. Además se mostrará la independencia del estado inicial y problemas que no se han llegado a solucionar desde la perspectiva de (referencia).
 
-\section{Especificación del equilibrio}
+\section{Especificación del Equilibrio}
 
 Las preguntas planteadas anteriormente quieren enfocarse en el equilibrio pero para poder seguir viendo qué ocurre   con este fenómeno se deberá establecer lo que significa, basados en conceptos fenomenológicos se dará la  definición del equilibrio y qué se espera de este estado.
 \\
@@ -22,7 +22,7 @@ Esta restricción del Hamiltoniano comprende que no importa como se divida el su
 
 \section{Equilibración}
 
-La perspectiva principal que se quiere dar a entender siguiendo a (Linden et al.) viene en forma del siguiente resultado: Para cada estado puro de un sistema cuántico que se compone por un número grande de estados de energía propios y el cual evoluciona bajo un Hamiltoniano que tiene brechas de energías no degeneradas y por lo demás arbitrario, es tal que cada pequeño subsistema llegará al equilibrio. Esto quiere decir que todos los subsistemas pequeños cumplirán con las ideas anteriores sobre equilibrio exactamente que el sistema evolucionará a un estado particular y se quedará cercano a él o en este durante la mayoría del tiempo.
+La perspectiva principal que se quiere dar a entender siguiendo a \cite{LindenPaper} viene en forma del siguiente resultado: Para cada estado puro de un sistema cuántico que se compone por un número grande de estados de energía propios y el cual evoluciona bajo un Hamiltoniano que tiene brechas de energías no degeneradas y por lo demás arbitrario, es tal que cada pequeño subsistema llegará al equilibrio. Esto quiere decir que todos los subsistemas pequeños cumplirán con las ideas anteriores sobre equilibrio exactamente que el sistema evolucionará a un estado particular y se quedará cercano a él o en este durante la mayoría del tiempo.
 \\
 Hay en este resultado un requerimiento que anteriormente no fue nombrado, el requerimiento de una cantidad grande de estados propios de energía. La necesidad de que el sistema tenga muchos estados propios de energía es equivalente a decir que el estado variará bastante durante su evolución temporal, por ejemplo el caso trivial de un solo estado propio de energía es claro que este no cambiará para nada. Este caso tan particular no llega a ser de mucho interés porque este estado no evolucionará a otro y se diría que ya se encuentra en equilibrio. Los resultados que se quieren mostrar tomaran estados fuera del equilibrio. En este punto se usan las otras suposiciones hechas anteriormente para que el subsistema no dependa del estado inicial el subsistema debe perder esta información; si el subsistema empieza lejano al equilibrio este pasará  por muchos estados en su camino al equilibrio lo cual implica que el universo también evolucione en muchos estados. El hecho de que el subsistema haya llegado al equilibrio no significa que el universo deje de evolucionar, debido a la unitaridad, debe seguir evolucionando con la misma proporción que antes. Para que los estados en los que el subsistema se encuentre en no equilibrio ocurran poco, los estados del universo en los que el subsistema se encuentre en esas condiciones deben ser una fracción muy pequeña del total de estados por donde pasa el universo. Por esto el universo debe pasar por muchos estados y el requerimiento de que tenga muchos estados propios de energía se valida. 
 \\
@@ -110,7 +110,7 @@ entonces
 =\Tr_{B} \omega_{B}^{2} -\sum_{k} |c_{k}|^{4} \Tr_{S}[ \Tr_{B}( \ket{E_{k}} \bra{E_{k}})]^{2} \leq  \Tr_{B}( \omega_{B}^{2}).
 \end{multline}
 
-La última  igualdad se encuentra recordando la definición de $\omega_{B}$ y observando la segunda igualdad. Por la subaditividad débil de la entropía de Rényi:
+La última  igualdad se encuentra recordando la definición de $\omega_{B}$ y observando la segunda igualdad. Por la subaditividad débil de la entropía de Rényi \cite{RenyiEntropia}:
 
 \begin{equation}
 \Tr(\omega^{2}) \geq  \frac{\Tr_{B}(\omega_{B}^{2})}{ \rank (\rho_{S})} \geq \frac{\Tr_{B}(\omega_{B}^{2})}{d_{S}}.
@@ -124,7 +124,7 @@ Uniendo todos los resultados con la desigualdad inicial del promedio de la dista
 
 Este resultado  da base para hablar de la termalización de una forma matemática, se ve que el subsistema se equilibra cuando la dimensión de $d^{eff}(\omega)$ sea mucho mayor que la dimensión de dos copias del subsistema ($d_{S}^{2}$) o cuando la dimensión efectiva explorada por el baño $d^{eff}(\omega_{B})$ sea mucho más grande que la dimensión del subsistema.
 \\
-EL resultado anterior tiene varias generalidades que se quieren recodar. La restricción impuesta sobre el Hamiltoniano  es una que no excluye muchos Hamiltonianos. Además de que esta ha sido la única restricción sobre todo el universo, no se ha especificado nada del baño ni del subsistema. El baño no está necesariamente en equilibrio no se le ha dado ninguna interpretación con respecto a la termodinámica usual a ningún objeto tratado hasta ahora. no se ha hablado tampoco de ninguna forma en la que el subsistema llega al equilibrio ni que esta en algún estado específico.
+EL resultado anterior tiene varias generalidades que se quieren recodar. La restricción impuesta sobre el Hamiltoniano  es una que no excluye muchos Hamiltonianos \cite{SakuraiQuantum}. Además de que esta ha sido la única restricción sobre todo el universo, no se ha especificado nada del baño ni del subsistema. El baño no está necesariamente en equilibrio no se le ha dado ninguna interpretación con respecto a la termodinámica usual a ningún objeto tratado hasta ahora. no se ha hablado tampoco de ninguna forma en la que el subsistema llega al equilibrio ni que esta en algún estado específico.
 \\
 Los valores propios de energía tampoco son importantes en las cotas dadas anteriormente, en el teorema al ser demostrado fue encontrado algunos valores propios de energía que al ser promediados dan 0. La energía es importante al buscar las formas exactas en las que evoluciona el sistema pero aquí se demostró que para la equilibración en intervalos de tiempo muy grandes no son muy importantes, las cotas son independientes del tiempo. La forma en que se dividió el universo (subsistema y baño) no es importante, solo es importante para el teorema \ref{equlibracion} la dimensión del subsistema y no la especificación de la forma o un subsistema particular. Esto permite decir que cualquier subsistema con dimensión $d_{S}$ estará en equilibrio, los varios subsistemas bastante pequeños de dimensión $d_{S}$ también estarán en equilibrio.
 \\
@@ -167,7 +167,7 @@ se sigue directamente que
 \end{equation}
 concluyendo la prueba.
 \item
-Para demostrar la segunda parte se usará el lema de levy pero no directamente sino sobre la función 
+Para demostrar la segunda parte se usará el lema de levy \cite{lema} pero no directamente sino sobre la función 
 \begin{equation}
 f(\psi) \equiv f(\vec{x}(\psi)) = \ln \Bigg( \Tr \Big( \tilde{\$}[ \ket{\psi}\bra{\psi}]^{2} \Big) \Bigg)
 \end{equation}
@@ -241,7 +241,7 @@ y haciendo que $\epsilon=\ln 2$ se llega al resultado esperado.
 
 La primera parte del teorema \ref{teorema2} nos habla de cómo el promedio de la dimensión efectiva es más grande que la dimensión del subespacio de Hilbert esto significa que si se tiene estados de un subespacio bastante grande se puede asegurar un $d^{eff}(\omega)$ grade esto implica un $\langle D(\rho_{S}(t) ,\omega_{S}) \rangle_{t}$ pequeño. La segunda parte solo confirma de manera más estricta el hecho de encontrar un $d^{eff}(\omega)$ pequeño, mostrando que la probabilidad de encontrar una dimensión efectiva menor a $\frac{d_{R}}{4}$ es exponencialmente pequeña.\\
 \\
-Usando en teorema \ref{teorema2} se puede ver qué ocurre con un estado escogido de forma aleatoria del espacio total $\mathcal{H}$, un estado genérico. El análisis se sigue simplemente poniendo $d_{R}=d$ gracias a esto se comprende que $d^{eff}(\omega) \sim d$ ya que  hay una probabilidad exponencialmente baja para que se dé  el caso en que $d^{eff} < \frac{d}{4}$, como $d=d_{S}d_{B}$ la cota para las fluctuaciones queda $\sqrt{\frac{d_{S}}{d_{B}}}$. Un sistema de muchas partículas la dimensión del espacio de Hilbert crece de manera exponencial, si el subsistema es una fracción constante del número de partículas del baño esta proporción caerá de manera exponencial con el número total de de partículas luego los subsistemas se equilibrarán.
+Usando en teorema \ref{teorema2} se puede ver qué ocurre con un estado escogido de forma aleatoria del espacio total $\mathcal{H}$, un estado genérico. El análisis se sigue simplemente poniendo $d_{R}=d$ gracias a esto se comprende que $d^{eff}(\omega) \sim d$ ya que  hay una probabilidad exponencialmente baja para que se dé  el caso en que $d^{eff} < \frac{d}{4}$, como $d=d_{S}d_{B}$ la cota para las fluctuaciones queda $\sqrt{\frac{d_{S}}{d_{B}}}$. Un sistema de muchas partículas la dimensión del espacio de Hilbert crece de manera exponencial \cite{TodaStat}, si el subsistema es una fracción constante del número de partículas del baño esta proporción caerá de manera exponencial con el número total de de partículas luego los subsistemas se equilibrarán.
 \\
 Se podría suponer que  con los teoremas presentados hasta el momento el problema de termalización se ha resulto mayoritariamente pero qué ocurre con los sistemas que están lejos del equilibrio. Con lo dicho arriba sobre los estados genéricos se pensaría que cualquier sistema debe llegar al equilibrio pero esto no es cierto debido a que los estados lejos del equilibrio no son genéricos; los estados lejos del equilibrio no son típicos, por el capítulo anterior se sabe que con cotas exponenciales la mayoría de los estados en el espacio de Hilbert son tales que un subsistema pequeño está en un estado canónico.
 \\
@@ -335,10 +335,8 @@ entonces la constante de Lipschitz satisface $\eta \leq 1$. Sustituyendo en el l
 Para un estado inicial que sea el producto del estado del sistema y el del ambiente $\ket{\psi}_{SB}= \ket{\psi}_{S} \ket{\phi}_{B}$ en el espacio $\mathcal{H}_{R}=\ket{\psi} \otimes \mathcal{H}_{R}^{B}$ se mostró que para estados genéricos el ambiente causa que el subsistema se equilibre aunque el estado de equilibrio $\omega_{S}^{\psi}$ del subsistema podría  depender del estado inicial del baño $\ket{\phi}_{B}$. Esto no es así y casi todos los estados del baño en $\mathcal{H}_{B}^{R}$ llevan al mismo estado de equilibrio del subsistema simplemente usando el resultado anterior a  $\mathcal{H}_{B} = \ket{\psi}\otimes \mathcal{H}_{R}^{B}$ y luego $d_{R} = d_{R}^{B}$, si $d_{R}^{B} \gg d_{S}$ para casi todos los estados iniciales del baño llevarán al subsistema al mismo estado de equilibrio $\omega_{S}$. como se usó la cota menos estricta este resultado no depende de la forma explícita de los estados de energías propios.
 \\
 
-\section{Conclusión}
 
-El nuevo enfoque dado en el capítulo anterior fue explorado aún más en este viendo qué ocurre con los sistemas al evolucionar ver que este enfoque es fructífero  en resultados y se puede seguir profundizando genera un interés para que se siga explorando. En este capítulo se mostró que la mayoría de estados en el espacio de Hilbert llegan a fluctuar durante gran parte del tiempo alrededor del mismo estado promediado temporalmente. Aunque primero se prueba con el estado temporalmente promediado luego se asegura que generalmente los estados tienen un mismo estado de equilibrio y este es su estado temporalmente promediado. Todo esto explora las dos primeras ideas sobre equilibrio, que un estado se encuentre en un mismo estado duran mucho tiempo y la independencia del 
-
+El nuevo enfoque dado en el capítulo anterior fue explorado aún más siguiendo a \cite{LindenPaper} en este capítulo viendo qué ocurre con los sistemas al evolucionar. El enfoque dado por \cite{Popescu2006} es fructífero  en resultados y se puede seguir profundizando esto genera un interés para que se siga explorando esta perspectiva. Este capítulo mostró cómo en general los estados de un espacio de Hilbert bastante grande que tiene muchos estados propios de energía llegan a estar bastante cerca del estado promedio (promediado temporalmente) y se dice que se equilibra este. Luego se muestra que en general el estado de equilibrio es ese estado promedio. Linden et al. mostraron que hay equilibrio para estados genéricos y también para estados fuera del equilibrio además mostraron la independencia del estado del baño. Aunque ellos no mostraron la independencia del estado del subsistema no debería influenciar el equilibrio. Siguiendo lo dicho por ellos este problema muestra más dificultades que los otros dado a que es necesario una especificación de la energía porque ahora jugaría un papel más importante, en los teoremas anteriores no fue necesario hablar de la energía excepto en el teorema \ref{mismo estado} donde hay una desigualdad dada por los estados propios de energía.
 %-----------------------------
 %\textbf{Independenciadelestado del sistema}: Como yase hadicho el subsistema en contacto con el baño llega al equilibrio sin importar su estado inicial pero sí depende del baño. Este resultado no se pudo resolver pero se da más indicios.
 %Los problemas son que el estado de equilibrio no siempre es independiente del estado inicial del subsiste,a. si el subsistema puede cambiar al ambiente de forma drástica el estado de equilibrio sí dependerá del estado inicial del subsistema. aquí muestra que las dimensiones del espacio de Hilbert del subsistemas el ambiente son importante pero el valor se le haya dado una restricción al Hamiltoniano (Brechas de energías no degeneradas ) esta condición no están estricta como para no permitir cantidades conservadas en el subsistema cuando estas cantidades conservadas existen los estados del subsistema con diferentes constantes(estados inicial es diferentes )no podrán llegar al mismo estado de equilibrio.
