--- a/main.tex
+++ b/main.tex
@@ -180,6 +180,8 @@
 
 \include{Capitulos/preliminares}
 \thispagestyle{empty}
+\include{Capitulos/cap1	}
+\thispagestyle{empty}
 \include{Capitulos/cap2}
 \thispagestyle{empty}
 \include{Capitulos/cap3}
